# gestion-immobiliere

./: .gitignore  README.md  pyproject.toml  run.py
app/: README.md
app/api/: api.py
app/api/routes/: properties.py  users.py
app/core/: config.py
app/models/: __init__.py  property.py  room.py  user.py
app/schemas/: property_schema.py  room_schema.py  user_schema.py
app/services/: property_service.py  user_service.py
tests/: conftest.py
tests/unit/: test_property_service.py  test_user_service.py
