[project]
name = "gestion-immobiliere"
version = "0.1.0"
description = ""
authors = [
    {name = "rvila94",email = "r94vila@gmail.com"}
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "marshmallow (>=4.2.2,<5.0.0)",
    "flask-marshmallow (>=1.4.0,<2.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "marshmallow-sqlalchemy (>=1.4.2,<2.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"